Fin sección 9 - NestPokemon

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/nest-pokemon
+# MONGODB_URI=mongodb://mongo:zKNjVxXyzMseYKkLOupwmAORodFpozkR@autorack.proxy.rlwy.net:30537
 PORT=3000
 DEFAULT_LIMIT=5
